<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    single mean an item will be selected untill it is unchecked/unselected-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_car_list"
            android:icon="@drawable/food_list"
            android:title="@string/car_list" />
        <!--        <item-->
        <!--            android:icon="@drawable/favorites_icon"-->
        <!--            android:title="@string/menu_favorites" />-->


    </group>

    <item

        android:title="@string/profile_txt">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/menu_login"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/nav_order_history"
                    android:icon="@drawable/history_icon"
                    android:title="@string/menu_order_history" />

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/menu_profile_icon"
                    android:title="@string/menu_profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/power_icon"
                    android:title="@string/menu_logout" />
            </group>


        </menu>
    </item>

    <item android:title="Misc">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_needHelp"
                    android:icon="@drawable/menu_help"
                    android:title="@string/menu_help" />

                <item
                    android:id="@+id/nav_about_app"
                    android:icon="@drawable/info_about_icon"
                    android:title="@string/about_app" />
            </group>


        </menu>
    </item>
</menu>